# crate-me

./: .gitignore  README.md
examples-play/: Cargo.toml
examples-play/examples/: exam_errors.rs  exam_genetics.rs  exam_gjson.rs  exam_lifetime.rs  exam_trait.rs
hkv/: Cargo.toml  README.md  build.rs
hkv/examples/: client.rs  server.rs
hkv/proto/: qic.proto
hkv/src/: error.rs  lib.rs
hkv/src/pb/: mod.rs  qic.rs
hkv/src/service/: command.rs  mod.rs
hkv/src/storage/: memtable.rs  mod.rs
httpcli/: Cargo.toml
httpcli/src/: main.rs
mgrep/: Cargo.toml
mgrep/src/: errors.rs  lib.rs  main.rs
querysth/: Cargo.toml  README.md
querysth/examples/: covid.rs  dialect.rs  exam_trait.rs
querysth/src/: dialect.rs  fetcher.rs  lib.rs  transfer.rs
