[package]
name = "httpcli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0.0"
anyhow = "1.0"
mime = "0.3.16"
jsonxf = "1.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
