[package]
name = "querysth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
sqlparser = "0.12.0"
tracing = "0.1"
polars = {version = "0.17.0", features = ["json", "lazy"]}
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["full"]}
